--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native": "0.63.3",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "expo-font": "~8.4.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
