--- a/package.json
+++ b/package.json
@@ -5,25 +5,47 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "storybook": "(adb reverse tcp:9009 tcp:9009 || true) && start-storybook -p 9009",
+    "build-storybook": "build-storybook",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-font": "~8.4.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "0.63.3",
     "react-native-web": "~0.13.12",
-    "styled-components": "^5.2.1",
-    "expo-font": "~8.4.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "jest-expo": "^40.0.1",
+    "jest": "^26.6.3",
     "@babel/core": "~7.9.0",
+    "@storybook/addon-actions": "^5.3.21",
+    "@storybook/addon-knobs": "^5.3.21",
+    "@storybook/addon-links": "^5.3.21",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.23",
+    "@storybook/react-native": "^5.3.23",
+    "@storybook/react-native-server": "^5.3.23",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.7",
+    "babel-loader": "^8.2.2",
     "typescript": "~4.0.0"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base)"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/__mocks__/globalMock.js"
+    ]
+  }
 }
