--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
+    "prestorybook": "rnstl",
     "storybook": "(adb reverse tcp:9009 tcp:9009 || true) && start-storybook -p 9009",
     "build-storybook": "build-storybook",
     "test": "jest --passWithNoTests"
@@ -21,8 +22,6 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "jest-expo": "^40.0.1",
-    "jest": "^26.6.3",
     "@babel/core": "~7.9.0",
     "@storybook/addon-actions": "^5.3.21",
     "@storybook/addon-knobs": "^5.3.21",
@@ -36,6 +35,9 @@
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.7",
     "babel-loader": "^8.2.2",
+    "jest": "^26.6.3",
+    "jest-expo": "^40.0.1",
+    "react-native-storybook-loader": "^2.0.2",
     "typescript": "~4.0.0"
   },
   "private": true,
@@ -47,5 +49,14 @@
     "setupFilesAfterEnv": [
       "<rootDir>/__mocks__/globalMock.js"
     ]
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./storybook/stories"
+      ],
+      "pattern": "**/*.stories.js",
+      "outputFile": "./storybook/storyLoader.js"
+    }
   }
 }
