--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
     "@types/styled-components": "^5.1.7",
+    "@types/styled-components-react-native": "^5.1.0",
     "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
     "jest-expo": "^40.0.1",
