--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prestorybook": "rnstl",
     "storybook": "(adb reverse tcp:9009 tcp:9009 || true) && start-storybook -p 9009",
     "build-storybook": "build-storybook",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "eslint": "./node_modules/.bin/eslint .",
+    "eslintfix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
     "expo": "~40.0.0",
@@ -23,6 +25,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@storybook/addon-actions": "^5.3.21",
     "@storybook/addon-knobs": "^5.3.21",
     "@storybook/addon-links": "^5.3.21",
@@ -32,18 +36,24 @@
     "@storybook/react-native-server": "^5.3.23",
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.20",
+    "@types/jsdom": "^16.2.6",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "^0.63.45",
     "@types/styled-components": "^5.1.7",
     "@types/styled-components-react-native": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.13.0",
+    "@typescript-eslint/parser": "^4.13.0",
     "babel-loader": "^8.2.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
+    "husky": "^4.3.8",
     "jest": "^26.6.3",
+    "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "jest-expo": "^40.0.1",
-    "jest-environment-enzyme": "^7.1.2",
     "react-native-storybook-loader": "^2.0.2",
     "typescript": "~4.0.0"
   },
